<resources>
    <string name="app_name">Планировщик задач</string>

    <string name="title_task_list">Задачи</string>
    <string name="button_add_task">Добавить задачу</string>

    <string name="title_add_task">Новая задача</string>
    <string name="hint_task_title">Введите название задачи</string>
    <string name="hint_task_description">Введите описание задачи</string>
    <string name="button_save_task">Сохранить</string>

    <string name="title_stats">Статистика</string>
    <string name="text_total_tasks">Всего задач: </string>
    <string name="text_completed_tasks">Выполнено задач: </string>

    <string name="text_stats">Статистика</string>
    <string name="text_main_menu">К задачам</string>
    <string name="text_deadline">Выберите срок выполнения задачи</string>

    <string name="text_total_tasks_with_value">Всего задач: %d</string>
    <string name="text_completed_tasks_with_value">Выполнено задач: %d</string>
    <string name="button_task_added">Задача добавлена!</string>

    <string name="stats_text">Выполнено %1$d из %2$d задач</string>
    <string name="titleOfTask">Название</string>
    <string name="description">Описание</string>
    <string name="data">Дата (ГГГГ-ММ-ДД)</string>
    <string name="text_create">Создать</string>
    <string name="text_createTask">Создать задачу</string>
    <string name="text_statisitcs">Статистика</string>
    <string name="text_listOfTasks">Список задач</string>
    <string name="text_back">Назад</string>
    <string name="headOfList">Шапка списка задач</string>
    <string name="listOfTasksText">Список задач по названиям</string>
    <string name="listOfNames">Список названий задач</string>
    <string name="nameOfTask">Название задачи</string>
    <string name="Edit">Редактировать</string>
    <string name="Delete">Удалить</string>
    <string name="titleTask">Название задачи</string>
    <string name="desc">Описание</string>
    <string name="ddl">Дата дедлайна (например, 2025-06-15)</string>
    <string name="edot">Создать</string>
    <string name="tasks">Задачи</string>
    <string name="create">Создать задачу</string>
    <string name="statistics">Статистика</string>
    <string name="comp">Выполнено задач</string>
    <string name="back">Назад</string>
    <string name="titleF">Заголовок</string>
    <string name="date">Дата</string>
    <string name="descr">Описание</string>
    <string name="compl">Выполнено</string>
    <string name="edit">Редактировать</string>
    <string name="del">Удалить</string>
    <string name="des">Описание</string>
    <string name="dsta">Дата</string>
    <string name="tit">Заголовок</string>
    <string name="complet">Выполнено задач</string>
    <string name="bac">Назад</string>
    <string name="de">Описание</string>
    <string name="cret">Создать</string>
    <string name="dataa">Дата дедлайна (например, 2025-06-15)</string>
</resources>