<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    android:layout_marginTop="160dp">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleTask"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc"
        android:layout_marginTop="@dimen/padding_small"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ddl"
        android:layout_marginTop="@dimen/padding_small"
        android:inputType="date" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edot"
        android:layout_marginTop="@dimen/padding_medium" />
</LinearLayout>
